Fix: Sidebar hidden by default on all screens

--- a/css/style.css
+++ b/css/style.css
@@ -2923,9 +2923,9 @@ html {
 
 .main-content {
     flex: 1;
-    margin-left: 280px;
-    /* Offset for fixed sidebar */
-    width: calc(100% - 280px);
+    margin-left: 0;
+    width: 100%;
+    transition: margin-left var(--transition-base);
 }
 
 /* Sidebar Styles */
